# humanadsai

./: .gitignore  AI_DIRECTORY_SUBMISSIONS.md  README.md  SECURITY_AUDIT.md  hardhat.config.ts  package-lock.json  package.json  remotion-role-policy.json  remotion-user-policy.json  schema.sql  tsconfig.hardhat.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
contracts/: HusdFaucet.sol
docs/: cookies.md  guidelines-advertiser.md  guidelines-promoter.md  privacy.md  spec-mission-image-creative.md  support.md  terms.md  testnet-disclosure.md  video-posting-spec.md
humanads-imggen/: pyproject.toml
humanads-imggen/prompts/: blacklist.txt  master-template.yaml  whitelist.txt
humanads-imggen/src/imggen/: __init__.py  blacklist.py  cli.py  config.py  template_engine.py
humanads-imggen/src/imggen/generators/: __init__.py  base.py  openai_gpt.py
humanads-imggen/src/imggen/scoring/: __init__.py  ai_smell.py  color.py  symmetry.py
humanads-imggen/src/imggen/storage/: __init__.py  db.py
humanads-imggen/src/imggen/utils/: image_io.py
humanads-imggen/tests/: test_blacklist.py  test_scoring.py  test_template_engine.py
internal/: moderation-playbook.md  payment-policy.md  security-abuse-model.md
migrations/: 0017_add_notifications.sql  0018_rename_withdrawn_to_cancelled.sql  0019_add_submission_url_unique.sql  001_add_x_profile_fields.sql  0020_add_advertiser_x_handle.sql  0021_add_email_webhook_tables.sql  0022_add_faucet_claims.sql  0023_add_email_system.sql  0024_add_escrow_and_ledger.sql  0025_add_advertiser_wallet_and_deposits.sql  002_add_invite_system.sql  (+29 more)
(+264 files in other folders)
